docs: update README with accurate project documentation and exception handling
- Add comprehensive exception handling documentation (DuplicateResourceException, AppointmentConflictException, BusinessRuleException, EntityNotFoundException)
- Document HTTP status codes and error response format (ApiResponse pattern)
- Update project structure section with actual file organization and English naming
- Clarify exception hierarchy with 409 Conflict and 400 Bad Request mappings
- Fix consistency: highlight centralized exception handling as key feature
- Add HTTP status reference table
- Remove outdated technical highlight about 'English codebase' (clarified to 'English API')